<resources>
    <string name="app_name">Trees Spectator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_catalog">Catalog</string>
    <string name="title_activity_map">Trees Map</string>
    <string name="menu_main">Main</string>
    <string name="menu_trees">Trees</string>
    <string name="menu_map">Map</string>
    <string name="menu_catalog">Catalog</string>
    <string name="tree_height">"Height (in meters) "</string>
    <string name="tree_diameter">"Diameter (in meters) "</string>
    <string name="tree_age">"Age (years) "</string>
    <string name="tree_kind">"Kind "</string>
    <string name="tree_startdate">"Monitoring started "</string>
    <string name="tree_editdate">"Edited "</string>
    <string name="tree_photo">"Photo "</string>
    <string name="photo_chooser">"Choose"</string>
    <string name="tree_description">"Description "</string>
    <string name="title_activity_trees">Trees</string>
    <string name="title_activity_tree_info">TreeInfoActivity</string>
    <string name="title_activity_data_editor">DataEditorActivity</string>
    <string name="add_tree">Add new tree</string>
    <string name="edit_tree">Edit information about tree</string>
    <string name="data_info">Information about tree</string>
    <string name="tree_name">"Name "</string>
    <string name="tree_location" translatable="false">Location</string>
    <string name="location_instructions">Latitude, Longitude</string>
    <string name="location_chooser">Get my location</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_language">Language</string>
    <string name="settings_version">Version 1.0</string>
    <string name="settings_about">© Trees Spectator</string>
    <string name="settings_contacts">Get in touch!</string>
    <string name="nogmail">Sorry, but you don\'t have any mail app</string>
    <string name="main_activity">Trees Explorer</string>
    <string name="database_error">Database error:</string>
    <string name="bad_connection">No internet connection!</string>
    <string name="settings_changed">Settings was updated in database!</string>
    <string name="settings_canceled">Error: settings wasn\'t updated in database!</string>
    <string name="message">Message</string>
    <string name="go_back">Go Back</string>
    <string name="no_internet">No internet connection! Application may not work properly!</string>
    <string name="choose_photo">Chose photo</string>
    <string name="uploading">Photo is uploading in database...</string>
    <string name="upload_succesfull">Information was uploaded!</string>
    <string name="upload_unsuccesfull">Image was not uploaded:</string>
    <string name="information_unsuccesfull">Information was not uploaded:</string>
    <string name="fill_values">Please fill all the values!</string>
    <string name="get_data">Data is loading...</string>
    <string name="record_deleted">Record was deleted!</string>
    <string name="delete_confirmation">Do you want to delete this record?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="leave_confirmation">Do you want to leave? Your changes will be lost</string>
    <string name="leave">Leave</string>
    <!-- Strings used for fragments for navigation -->


</resources>
