<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:clickable="false"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="5sp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/tree_height" />

    <TextView
        android:id="@+id/diameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/tree_diameter" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/tree_age" />

    <TextView
        android:id="@+id/kind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/tree_kind" />

    <TextView
        android:id="@+id/startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/tree_startdate"
        android:layout_marginBottom="10sp"
        />
</LinearLayout>