<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/treeImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:adjustViewBounds="true"
        android:background="@drawable/iwframe"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/marker" />

    <TextView
        android:id="@+id/treeHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/tree_height"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/treeAge" />

    <TextView
        android:id="@+id/treeStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/tree_startdate"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/treeKind" />

    <TextView
        android:id="@+id/treeAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/tree_age"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/treeImage" />

    <TextView
        android:id="@+id/treeEdited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/tree_editdate"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/treeStartDate" />

    <TextView
        android:id="@+id/treeKind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/tree_kind"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/treeDiameter" />

    <TextView
        android:id="@+id/treeDiameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/tree_diameter"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/treeHeight" />

    <LinearLayout
        android:id="@+id/linearInfo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/layout_border"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/treeEdited"
        tools:layout_editor_absoluteX="-5dp">

        <ScrollView
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/treeInfo"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text=""
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="17dp" />
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
