<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:id="@+id/editorScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/layout_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            tools:layout_editor_absoluteX="-16dp">

            <Button
                android:id="@+id/chooseLocation"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginStart="132dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="132dp"
                android:background="@drawable/button_shape"
                android:text="@string/location_chooser"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treeLocation" />

            <EditText
                android:id="@+id/treeLocationArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/textview_shape"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseLocation" />

            <TextView
                android:id="@+id/treeLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tree_location"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treeDescriptionArea" />

            <EditText
                android:id="@+id/treeDescriptionArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/textview_shape"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treeDescription" />

            <EditText
                android:id="@+id/treeKindArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/textview_shape"
                android:gravity="center"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treeKind" />

            <TextView
                android:id="@+id/treePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tree_photo"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treeLocationArea" />

            <EditText
                android:id="@+id/treeNameArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/textview_shape"
                android:gravity="center"
                android:inputType="text"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treeName"></EditText>


            <EditText
                android:id="@+id/treeAgeArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/textview_shape"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treeAge" />

            <EditText
                android:id="@+id/treeHeightArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/textview_shape"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treeHeight" />

            <EditText
                android:id="@+id/treeDiameterArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/textview_shape"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treeDiameter" />

            <TextView
                android:id="@+id/treeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tree_description"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/treeKindArea"
                tools:layout_editor_absoluteX="158dp" />

            <TextView
                android:id="@+id/treeKind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tree_kind"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treeDiameterArea" />

            <TextView
                android:id="@+id/treeDiameter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tree_diameter"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treeHeightArea" />

            <TextView
                android:id="@+id/treeHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tree_height"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treeAgeArea" />

            <TextView
                android:id="@+id/treeAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tree_age"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treeNameArea" />

            <TextView
                android:id="@+id/treeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tree_name"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/choosePhoto"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginStart="161dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="162dp"
                android:background="@drawable/button_shape"
                android:text="@string/photo_chooser"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/uploadedPhoto" />

            <ImageView
                android:id="@+id/uploadedPhoto"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="140dp"
                android:layout_marginBottom="5dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:background="@drawable/iwframe"
                app:layout_constraintBottom_toTopOf="@+id/choosePhoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/treePhoto"
                app:srcCompat="@drawable/ic_nature" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

