<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/linkedin"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:src="@drawable/linkedin"
        app:civ_border_color="#EEEEEE"
        app:civ_border_width="1dp"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/colorPrimaryDark"
        app:civ_shadow_radius="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsContacts" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/fb"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/facebook"
        app:civ_border_color="#EEEEEE"
        app:civ_border_width="1dp"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/colorPrimaryDark"
        app:civ_shadow_radius="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsContacts" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/gmail"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:src="@drawable/gmail"
        app:civ_border_color="#EEEEEE"
        app:civ_border_width="1dp"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/colorPrimaryDark"
        app:civ_shadow_radius="5"
        app:layout_constraintEnd_toStartOf="@+id/linkedin"
        app:layout_constraintStart_toEndOf="@+id/fb"
        app:layout_constraintTop_toBottomOf="@+id/settingsContacts" />

    <TextView
        android:id="@+id/settingsContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/settings_contacts"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lithuania" />

    <TextView
        android:id="@+id/settingsLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/settings_language"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/lithuania"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="37dp"
        android:clickable="true"
        android:src="@drawable/lithuania"
        app:civ_border_color="#EEEEEE"
        app:civ_border_width="1dp"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/colorPrimaryDark"
        app:civ_shadow_radius="5"
        app:layout_constraintEnd_toStartOf="@+id/english"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLanguage" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/english"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="115dp"
        android:src="@drawable/uk"
        android:clickable="true"
        app:civ_border_color="#EEEEEE"
        app:civ_border_width="1dp"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/colorPrimaryDark"
        app:civ_shadow_radius="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lithuania"
        app:layout_constraintTop_toBottomOf="@+id/settingsLanguage" />

    <TextView
        android:id="@+id/settingsVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/settings_version"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/settingsAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_about"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/settingsVersion"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
